Fixed lag when using on iOS for molecules/back-to-top component

--- a/components/Molecules/back-to-top/_back-to-top.scss
+++ b/components/Molecules/back-to-top/_back-to-top.scss
@@ -58,6 +58,9 @@
 
         /* Box-modell/beteende */
         padding: $back-to-top__container--padding;
+        
+        transform: translate3d(0,0,0); //iOS
+        -webkit-transform: translate3d(0,0,0); //iOS
 
         & a:hover,
         & a:active {
